<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="clip_horizontal"
    android:layout_marginTop="40dp"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="194dp"
        android:layout_gravity="center|top"

        android:contentDescription="@string/calculator"
        app:srcCompat="@drawable/calculator" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:gravity="center_horizontal"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/textFirstvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:autoLink="all"
        android:ems="10"
        android:hint="@string/enter_first_number"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textSize="24sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/textSecondvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/enter_second_number"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textSize="24sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:text="@string/answer"
        android:textSize="24sp"
        android:hapticFeedbackEnabled="true"/>

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@android:color/black"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/addition"
        android:textColor="#93C85E"
        android:textSize="24sp" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@android:color/black"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/subtraction"
        android:textColor="#93C85E"
        android:textSize="24sp" />

    <Button
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@android:color/black"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/division"
        android:textColor="#93C85E"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="100dp"
        android:background="@android:color/black"
        android:hapticFeedbackEnabled="true"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/multiplication"
        android:textColor="#93C85E"
        android:textSize="24sp" />


</LinearLayout>